--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/starlight": "^0.36.1",
     "@fontsource/mitr": "^5.2.8",
+    "@fontsource/sarabun": "^5.2.8",
     "astro": "^5.6.1",
     "sharp": "^0.34.2"
   }
