--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@astrojs/starlight": "^0.36.1",
     "@fontsource/mitr": "^5.2.8",
     "@fontsource/sarabun": "^5.2.8",
-    "astro": "^5.6.1",
-    "sharp": "^0.34.2"
+    "astro": "5.15.9",
+    "sharp": "^0.34.2",
+    "starlight-llms-txt": "^0.7.0"
   }
 }
